<resources>
    <string name="app_name">Hamba</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string-array name="business_type_array">
        <item>Shop Owner</item>
        <item>Delivery Boy</item>
        <item>Delivery Company</item>
        <item>Wholesale</item>
    </string-array>

    <string-array name="mall">
        <item>Select maximum 5 malls</item>
        <item>Mall 1</item>
        <item>Mall 2</item>
        <item>Mall 3</item>
        <item>Mall 4</item>
        <item>Mall 5</item>
        <item>Mall 6</item>
    </string-array>


    <string-array name="id_or_passport">
        <item>National ID #</item>
        <item>Passport #</item>
    </string-array>
    <string-array name="interests">
        <item>Consumer</item>
        <item>Services</item>
        <item>Professional</item>
        <item>Wholesale</item>
        <item>Discoveries</item>
    </string-array>
    <string-array name="nationality_list">
        <item>Afghan</item>
        <item>Albanian</item>
        <item>Algerian</item>
        <item>American</item>
        <item>Andorran</item>
        <item>Angolan</item>
        <item>Antiguans</item>
        <item>Argentinean</item>
        <item>Armenian</item>
        <item>Australian</item>
        <item>Austrian</item>
        <item>Azerbaijani</item>
        <item>Bahamian</item>
        <item>Bahraini</item>
        <item>Bangladeshi</item>
        <item>Barbadian</item>
        <item>Barbudans</item>
        <item>Batswana</item>
        <item>Belarusian</item>
        <item>Belgian</item>
        <item>Belizean</item>
        <item>Beninese</item>
        <item>Bhutanese</item>
        <item>Bolivian</item>
        <item>Bosnian</item>
        <item>Brazilian</item>
        <item>British</item>
        <item>Bruneian</item>
        <item>Bulgarian</item>
        <item>Burkinabe</item>
        <item>Burmese</item>
        <item>Burundian</item>
        <item>Cambodian</item>
        <item>Cameroonian</item>
        <item>Canadian</item>
        <item>Cape Verdean</item>
        <item>Central African</item>
        <item>Chadian</item>
        <item>Chilean</item>
        <item>Chinese</item>
        <item>Colombian</item>
        <item>Comoran</item>
        <item>Congolese</item>
        <item>Costa Rican</item>
        <item>Croatian</item>
        <item>Cuban</item>
        <item>Cypriot</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Djibouti</item>
        <item>Dominican</item>
        <item>Dutch</item>
        <item>East Timorese</item>
        <item>Ecuadorean</item>
        <item>Egyptian</item>
        <item>Emirati</item>
        <item>Equatorial Guinean</item>
        <item>Eritrean</item>
        <item>Estonian</item>
        <item>Ethiopian</item>
        <item>Fijian</item>
        <item>Filipino</item>
        <item>Finnish</item>
        <item>French</item>
        <item>Gabonese</item>
        <item>Gambian</item>
        <item>Georgian</item>
        <item>German</item>
        <item>Ghanaian</item>
        <item>Greek</item>
        <item>Grenadian</item>
        <item>Guatemalan</item>
        <item>Guinea-Bissauan</item>
        <item>Guinean</item>
        <item>Guyanese</item>
        <item>Haitian</item>
        <item>Herzegovinian</item>
        <item>Honduran</item>
        <item>Hungarian</item>
        <item>I-Kiribati</item>
        <item>Icelander</item>
        <item>Indian</item>
        <item>Indonesian</item>
        <item>Iranian</item>
        <item>Iraqi</item>
        <item>Irish</item>
        <item>Israeli</item>
        <item>Italian</item>
        <item>Ivorian</item>
        <item>Jamaican</item>
        <item>Japanese</item>
        <item>Jordanian</item>
        <item>Kazakhstani</item>
        <item>Kenyan</item>
        <item>Kittian and Nevisian</item>
        <item>Kuwaiti</item>
        <item>Kyrgyz</item>
        <item>Laotian</item>
        <item>Latvian</item>
        <item>Lebanese</item>
        <item>Liberian</item>
        <item>Libyan</item>
        <item>Liechtensteiner</item>
        <item>Lithuanian</item>
        <item>Luxembourger</item>
        <item>Macedonian</item>
        <item>Malagasy</item>
        <item>Malawian</item>
        <item>Malaysian</item>
        <item>Maldivian</item>
        <item>Malian</item>
        <item>Maltese</item>
        <item>Marshallese</item>
        <item>Mauritanian</item>
        <item>Mauritian</item>
        <item>Mexican</item>
        <item>Micronesian</item>
        <item>Moldovan</item>
        <item>Monacan</item>
        <item>Mongolian</item>
        <item>Moroccan</item>
        <item>Mosotho</item>
        <item>Motswana</item>
        <item>Mozambican</item>
        <item>Namibian</item>
        <item>Nauruan</item>
        <item>Nepalese</item>
        <item>New Zealander</item>
        <item>Ni-Vanuatu</item>
        <item>Nicaraguan</item>
        <item>Nigerian</item>
        <item>Nigerien</item>
        <item>North Korean</item>
        <item>Northern Irish</item>
        <item>Norwegian</item>
        <item>Omani</item>
        <item>Pakistani</item>
        <item>Palauan</item>
        <item>palestinian</item>
        <item>Panamanian</item>
        <item>Papua New Guinean</item>
        <item>Paraguayan</item>
        <item>Peruvian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Qatari</item>
        <item>Romanian</item>
        <item>Russian</item>
        <item>Rwandan</item>
        <item>Saint Lucian</item>
        <item>Salvadoran</item>
        <item>Samoan</item>
        <item>San Marinese</item>
        <item>Sao Tomean</item>
        <item>Saudi</item>
        <item>Scottish</item>
        <item>Senegalese</item>
        <item>Serbian</item>
        <item>Seychellois</item>
        <item>Sierra Leonean</item>
        <item>Singaporean</item>
        <item>Slovakian</item>
        <item>Slovenian</item>
        <item>Solomon Islander</item>
        <item>Somali</item>
        <item>South African</item>
        <item>South Korean</item>
        <item>Spanish</item>
        <item>Sri Lankan</item>
        <item>Sudanese</item>
        <item>Surinamer</item>
        <item>Swazi</item>
        <item>Swedish</item>
        <item>Swiss</item>
        <item>Syrian</item>
        <item>Taiwanese</item>
        <item>Tajik</item>
        <item>Tanzanian</item>
        <item>Thai</item>
        <item>Togolese</item>
        <item>Tongan</item>
        <item>Trinidadian or Tobagonian</item>
        <item>Tunisian</item>
        <item>Turkish</item>
        <item>Tuvaluan</item>
        <item>UAE</item>
        <item>Ugandan</item>
        <item>Ukrainian</item>
        <item>Uruguayan</item>
        <item>Uzbekistani</item>
        <item>Venezuelan</item>
        <item>Vietnamese</item>
        <item>Welsh</item>
        <item>Yemenite</item>
        <item>Zambian</item>
        <item>Zimbabwean</item>
    </string-array>
    <string-array name="interests_list">
        <item>Movies and cinema</item>
        <item>Social media</item>
        <item>online gaming</item>
        <item>Fashion</item>
        <item>Makeup and beauty</item>
        <item>Food and cooking</item>
        <item>Traveling</item>
        <item>Music and dancing</item>
        <item>Jewelry making</item>
        <item>Photography</item>
        <item>Painting</item>
        <item>Sports</item>
        <item>TV shows</item>
        <item>Cars and racing</item>
        <item>Pets and animals</item>
        <item>Reading</item>
        <item>Biking</item>
        <item>Hiking</item>
        <item>Peotry and Art</item>
        <item>Outdoors and Safari</item>
        <item>Running</item>
        <item>Fishing</item>
        <item>Self development</item>
        <item>Volunteering</item>
        <item>Robotics</item>
        <item>Programming</item>
        <item>Small business</item>
        <item>Others</item>
    </string-array>
    <string name="ok">Ok</string>
    <string name="client_id">e9b99b4229b54251b0305413b1425539</string>
    <string name="redirect_url">https://instagram.com/</string>
    <string name="base_url">https://api.instagram.com/</string>
    <string name="get_user_info_url">https://api.instagram.com/v1/users/self/?access_token=</string>
    <string name="title_activity_owner_home">OwnerHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_individual_home">IndividualHomeActivity</string>
    <string name="info">Information</string>
    <string name="error">Error</string>
    <string name="email_failed">Failed to send verification email.</string>
    <string name="msg_owner_email">Please enter the owner\'s email</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="note_forget_password2">we have sent you four digit code on your email</string>
    <string name="send_me_again">send me again</string>
    <string name="enter_four_digit">Enter four digit code</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="its_ok">It\'s okay!</string>
    <string name="emter_your_email_address">Enter your email address</string>
    <string name="continue_string">Continue</string>
    <string name="reset_password">Reset Password</string>
    <string name="done">Done</string>
    <string name="login">Login</string>


</resources>
