<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_forgetpassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ForgotPassActivity"
    android:background="#EEFFFFFF"

    android:orientation="vertical"
    android:gravity="center|top">
    <ImageView
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_width="@dimen/_74sdp"
        android:layout_height="@dimen/_75sdp"
        android:src="@drawable/lock"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_your_password"
            android:textSize="20sp"
            style="@style/heading_style"
            android:textColor="@color/colorDarkx2Primary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/note_forget_password2"
            android:textSize="16sp"
            android:layout_marginRight="@dimen/_50sdp"
            android:layout_marginLeft="@dimen/_50sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:textAlignment="center"
            style="@style/light_style"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:id="@+id/linear_send_me_again"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_me_again"
                android:textSize="16sp"
                android:layout_marginRight="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_50sdp"
                android:textAlignment="center"
                style="@style/light_style"
                android:textColor="@color/colorPrimary"/>
            <View
                android:layout_width="@dimen/_90sdp"
                android:layout_height="1dp"
                android:background="@color/colorPrimary"
                android:textAlignment="center"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/TI_code"
            android:tag="email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:textSize="16sp"
            app:errorEnabled="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            >
            <EditText
                android:gravity="center"
                android:id="@+id/ET_code"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_four_digit"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                style="@style/light_style"
                android:background="@drawable/edit_text_focus_out_primarycolor"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/TI_new_password"
            android:tag="email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:textSize="16sp"
            app:errorEnabled="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <EditText
                android:gravity="center"
                android:id="@+id/ET_new_password"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                style="@style/light_style"
                android:background="@drawable/edit_text_focus_out_primarycolor"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/TI_confirm_password"
            android:tag="email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:textSize="16sp"
            app:errorEnabled="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">
            <EditText
                android:gravity="center"
                android:id="@+id/ET_confirm_password"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorPrimary"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                style="@style/light_style"
                android:background="@drawable/edit_text_focus_out_primarycolor"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_continue"
                android:layout_width="@dimen/_200sdp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/primary_btn"
                android:baselineAligned="true"
                android:text="@string/reset_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp"
                style="@style/heading_style"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
</ScrollView>