<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_forgetpassword"
    tools:context=".Activities.ForgotPassActivity"
 >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_transparent"
        android:orientation="vertical"
        android:gravity="center|top">
        <ImageView
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="@dimen/_75sdp"
            android:layout_height="@dimen/_75sdp"
            android:src="@drawable/question_mark"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/its_ok"
                android:textSize="18sp"
                android:textColor="@color/colorDarkPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset_your_password"
                android:textSize="18sp"
                android:layout_marginTop="-15dp"
                android:textColor="@color/colorDarkPrimary"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20sdp">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/TI_email"
                android:tag="email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                android:textSize="16sp"
                app:errorEnabled="true"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">
                <EditText
                    android:gravity="center"
                    android:id="@+id/ET_email"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:layout_width="@dimen/_250sdp"
                    android:layout_height="wrap_content"
                    android:hint="@string/emter_your_email_address"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/colorPrimary"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:background="@drawable/edit_text_focus_out_primarycolor"/>
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center">
                <Button
                    android:id="@+id/btn_continue"
                    android:layout_margin="8dp"
                    android:text="@string/continue_string"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/primary_btn"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>